--- a/css/navigation.css
+++ b/css/navigation.css
@@ -788,14 +788,24 @@ nav .wp-block-navigation-submenu ul li a span,
 /* ----------------------- */
 /* FOOTER NAV */
 
+footer nav {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    justify-content: flex-start;
+}
+
 footer nav ul,
 footer .footer_nav .menu {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
-    gap: 20px;
+    gap: 0.125rem 2rem;
     list-style: none;
+    flex-wrap: wrap;
+    max-height: 400px;
+    margin-left: 0;
 }
 footer nav li a,
 footer nav ul li a span,
@@ -806,10 +816,10 @@ footer .menu-link {
     letter-spacing: var(--letterspacing-footer);
     text-transform: uppercase;
     /*  */
-    color: var(--white);
+    color: var(--primary);
     text-decoration: none;
     transition: var(--transition);
     text-transform: uppercase;
     position: relative;
-    padding: 0.5rem 1rem;
+    padding: 0.125rem 0.5rem;
 }
