--- a/css/specific.css
+++ b/css/specific.css
@@ -211,3 +211,9 @@
     height: 100%;
     object-fit: cover;
 }
+
+.full-width-bg {
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+}
