--- a/css/typography.css
+++ b/css/typography.css
@@ -51,8 +51,10 @@
     --font-size-blockquote: 60px;
     --font-size-blockquote: clamp(2rem, 1.6rem + 1.50vw, 3.75rem);
     --font-size-h2: 80px;
-    /* --font-size-h2: clamp(3.8rem, 3.56rem + 1.2vw, 5rem); */
-    --font-size-h3: clamp(2.75rem, 2.267857142857143rem + 0.7142857142857143vw, 3.125rem); /* 50px / 3.125rem */
+    --font-size-h2: clamp(3.8rem, 3.56rem + 1.2vw, 5rem);
+    /* --font-size-h3: clamp(2.75rem, 1.971rem + 0.962vw, 3.125rem);  */
+    /* 50px / 3.125rem */
+    --font-size-h3: clamp(1.5rem, 1.048rem + 1.731vw, 3rem);
     --font-size-h2-subtitle: 20px;
     --font-size-h4: 20px;
     --font-size-h4-bold: 16.5px;
@@ -327,13 +329,13 @@ strong {
 
 /* other */
 
-._left, .left-align {
+._left, .left-align, .left {
     text-align: left;
 }
-._right, .right-align {
+._right, .right-align, .right {
     text-align: right;
 }
-._center, .center-align {
+._center, .center-align, .center {
     text-align: center;
 }
 
