--- a/css/specific.css
+++ b/css/specific.css
@@ -104,29 +104,32 @@
 
 /* home collections */
 
-.collections_hero {
+.half_panel-hero,
+.collections-hero {
     padding: 0;
     justify-content: flex-start;
 }
-.collections_hero .row {
+.half_panel-hero .row,
+.collections-hero .row {
     align-items: center;
     max-width: unset;
     gap: 0;
 }
-.collections_hero .column {
+.half_panel-hero .column,
+.collections-hero .column {
     align-items: center;
     width: 100%;
     height: 100%;
 }
-
-.collections_hero .column {
+.half_panel-hero .column,
+.collections-hero .column {
     background-size: cover;
     background-position: center center;
     height: var(--hero-height);
     /* padding: var(--gap); */
 }
-
-.collections_hero .column .card {    
+.half_panel-hero .column .card,
+.collections-hero .column .card {    
     
     max-width: calc(50vw - (var(--gutter)*2));
     /* aspect-ratio: 1 / 1; */
@@ -135,12 +138,67 @@
     padding-bottom: var(--gutter);
 }
 @media screen and (max-width: 1080px) {
-    .collections_hero .column .card {
+    .half_panel-hero .column .card,
+    .collections-hero .column .card {
         max-width: calc(50vw - (var(--gap)*2));
     }
 }
 @media screen and (max-width: 880px) {
-    .collections_hero .column .card {    
+    .half_panel-hero .column .card,
+    .collections-hero .column .card {    
+    
+        max-width: var(--max-col-width);
+        
+    }
+}
+
+
+/*  */
+
+/* featured hero section */
+
+.featured-hero,
+.customised-hero {
+    padding: 0;
+    justify-content: flex-start;
+}
+.featured-hero .row,
+.customised-hero .row {
+    align-items: center;
+    max-width: unset;
+    gap: 0;
+}
+.featured-hero .column,
+.customised-hero .column {
+    align-items: center;
+    width: 100%;
+    height: 100%;
+}
+.featured-hero .column,
+.customised-hero .column {
+    background-size: cover;
+    background-position: center center;
+    height: var(--hero-height);
+    /* padding: var(--gap); */
+}
+.featured-hero  .column .card,
+.customised-hero .column .card {    
+    
+    max-width: calc(50vw - (var(--gutter)*2));
+    /* aspect-ratio: 1 / 1; */
+    overflow: hidden;
+    padding-top: var(--gutter);
+    padding-bottom: var(--gutter);
+}
+@media screen and (max-width: 1080px) {
+    .featured-hero .column .card,
+    .customised-hero .column .card {
+        max-width: calc(50vw - (var(--gap)*2));
+    }
+}
+@media screen and (max-width: 880px) {
+    .featured-hero .column .card,
+    .customised-hero .column .card {    
     
         max-width: var(--max-col-width);
         
@@ -148,64 +206,11 @@
 }
 
 .full-width-bg .img_wrap,
-.full-width-bg .img_wrap img
-.collections_hero .full-width-bg .img_wrap,
-.collections_hero .full-width-bg .img_wrap img {
-    
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
-
-/*  */
-
-/* home collections */
-
-.customised_hero {
-    padding: 0;
-    justify-content: flex-start;
-}
-.customised_hero .row {
-    align-items: center;
-    max-width: unset;
-    gap: 0;
-}
-.customised_hero .column {
-    align-items: center;
-    width: 100%;
-    height: 100%;
-}
-
-.customised_hero .column {
-    background-size: cover;
-    background-position: center center;
-    height: var(--hero-height);
-    /* padding: var(--gap); */
-}
-
-.customised_hero .column .card {    
-    
-    max-width: calc(50vw - (var(--gutter)*2));
-    /* aspect-ratio: 1 / 1; */
-    overflow: hidden;
-    padding-top: var(--gutter);
-    padding-bottom: var(--gutter);
-}
-@media screen and (max-width: 1080px) {
-    .customised_hero .column .card {
-        max-width: calc(50vw - (var(--gap)*2));
-    }
-}
-@media screen and (max-width: 880px) {
-    .customised_hero .column .card {    
-    
-        max-width: var(--max-col-width);
-        
-    }
-}
-
-.customised_hero .full-width-bg .img_wrap,
-.customised_hero .full-width-bg .img_wrap img {
+.full-width-bg .img_wrap img,
+.half_panel-hero .full-width-bg .img_wrap,
+.half_panel-hero .full-width-bg .img_wrap img,
+.collections-hero .full-width-bg .img_wrap,
+.collections-hero .full-width-bg .img_wrap img {
     
     width: 100%;
     height: 100%;
