--- a/css/cards.css
+++ b/css/cards.css
@@ -173,6 +173,8 @@
     transform: scale(1);
     transform-origin: center;
     transition: var(--transition);
+    aspect-ratio: 1 / 1.414;
+    /* A4 */
 }
 
 .grid-archive .card:hover img,
@@ -215,6 +217,7 @@
   display: -webkit-box;
   -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
+  margin-bottom: 0;
 }
 
 
