--- a/css/footer.css
+++ b/css/footer.css
@@ -12,8 +12,58 @@ footer {
     box-sizing: border-box;
 }
 
+/* ------------------------------------- */
+/*  */
 
-/* ----------------------- */
+.footer_top, .footer_main, .footer_bottom,
+.row.footer_top, .row.footer_main, .row.footer_bottom {
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+    gap: var(--gap);
+    max-width: var(--max-width);
+}
+.row.footer_top {
+    border-top: 1px solid var(--primary);
+    border-bottom: 1px solid var(--primary);
+}
+
+.row.footer_bottom {
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+}
+
+.column_wrap {
+    max-width: unset;
+    width: 100%;
+    display: flex;
+    /* flex-wrap: wrap; */
+    align-content: flex-start;
+    align-items: flex-start;
+    flex-direction: row;
+    justify-content: flex-start;
+    padding-top: 1rem;
+    border-top: 1px solid var(--primary);
+}
+
+.row.footer_bottom p {
+    margin-bottom: 0;
+}
+
+
+footer .col_group {
+    align-items: flex-start;
+}
+
+@media screen and (max-width: 600px){
+    footer .col_group {
+        flex-wrap: wrap;
+        justify-content: flex-start;
+    }
+}
+
+/* ------------------------------------- */
+/*  */
 
 footer .row,
 .post footer .row,
@@ -51,6 +101,10 @@ footer .row.bottom .credits {
     text-decoration: none;
 }
 
+.address {}
+.address p {
+    margin-bottom: 0;
+}
 
 footer .row .column {
     align-items: flex-start;
@@ -91,12 +145,19 @@ footer .site-logo-link {
     left: 0;
 }
 footer .logo {
-    width: 465px;
-    height: 63px;
+    width: 600px;
+    height: 145px;
     /* transform: translate(-50%, -50%); */
     transition: var(--transition);
     -o-object-fit: contain;
     object-fit: contain;
+}
+@media screen and (max-width: 880px) {
+    footer .logo {
+        width: var(--max-col-width);
+        max-width: 400px;
+        height: auto;
+    }
 }
 
 footer .logo img {
@@ -108,7 +169,8 @@ footer .logo img {
 footer,
 footer p,
 footer .address p,
-footer .address a {
+footer .address a,
+footer a {
     font-family: var(--footer-font-family);
     font-size: var(--font-size-footer);
     font-weight: var(--footer-font-weight);
@@ -117,11 +179,35 @@ footer .address a {
     text-decoration: none;
 }
 
+footer a {
+    color: var(--primary);
+    transition: var(--transition);
+    text-underline-offset: 0.1rem;
+}
+footer a:hover {
+    text-decoration: underline;
+    text-underline-offset: 0.2rem;
+}
+
+footer .menu-title {
+    margin-top: 1rem;
+    margin-left: 0.5rem;
+}
+footer .menu-title.less_margin {
+    margin-top: 0.175rem;
+}
+
+footer .menu-link {
+    max-width: 20ch;
+    line-height: 1.3;
+}
+
 footer img {
     width: 100%;
     height: auto;
 }
 
+/* ------------------------------------- */
 /*  */
 
 .social_header {
@@ -150,52 +236,9 @@ footer img {
     display: block;
 }
 
+
+
 /* ------------------------------------- */
-/*  */
-
-.footer_top, .footer_main, .footer_bottom,
-.row.footer_top, .row.footer_main, .row.footer_bottom {
-    display: flex;
-    justify-content: flex-start;
-    align-items: flex-start;
-    gap: var(--gap);
-    max-width: var(--max-width);
-}
-
-.row.footer_bottom {
-    padding-top: 1rem;
-    padding-bottom: 1rem;
-}
-
-.column_wrap {
-    max-width: unset;
-    width: 100%;
-    display: flex;
-    /* flex-wrap: wrap; */
-    align-content: flex-start;
-    align-items: flex-start;
-    flex-direction: row;
-    justify-content: flex-start;
-    padding-top: 1rem;
-    border-top: 1px solid var(--primary);
-}
-
-.row.footer_bottom p {
-    margin-bottom: 0;
-}
-
-
-footer .col_group {
-    align-items: flex-start;
-}
-
-@media screen and (max-width: 600px){
-    footer .col_group {
-        flex-wrap: wrap;
-        justify-content: flex-start;
-    }
-}
-
 /*  */
 
 .certifications_group {
@@ -205,6 +248,7 @@ footer .col_group {
     gap: var(--gap);
 }
 
+/* ------------------------------------- */
 /* footer form */
 
 footer form {
@@ -215,4 +259,10 @@ footer form {
     flex-direction: column;
     gap: var(--gap);
     width: auto;
+}
+
+footer button, 
+footer [class*="button"],
+footer [type="submit"] {
+    padding: 0.635rem 2rem !important;
 }
