--- a/css/specific.css
+++ b/css/specific.css
@@ -143,15 +143,25 @@
         max-width: calc(50vw - (var(--gap)*2));
     }
 }
+
+
+@media screen and (max-width: 880px) {
+    .half_panel-hero .column:has(.card) {
+        margin: -30vh auto 3rem;
+        box-sizing: border-box;
+        width: calc(var(--max-width) - (var(--gutter)*2));
+        z-index: 111;
+    }
+}
+
 @media screen and (max-width: 880px) {
     .half_panel-hero .column .card,
     .collections-hero .column .card {    
     
-        max-width: var(--max-col-width);
+        max-width: calc(var(--max-width) * 8/10);
         
     }
 }
-
 
 /*  */
 
@@ -194,6 +204,11 @@
     .featured-hero .column .card,
     .customised-hero .column .card {
         max-width: calc(50vw - (var(--gap)*2));
+    }
+}
+@media screen and (max-width: 1080px) {
+    .featured-hero .column.empty_column {
+        display: none;
     }
 }
 @media screen and (max-width: 880px) {
