--- a/css/variables.css
+++ b/css/variables.css
@@ -66,7 +66,7 @@
 @media screen and (max-width: 1440px){
     :root {
         /* --max-width: 100vw; */
-        --max-col-width: 90vw;
+        --max-col-width: calc(100vw - (var(--gutter)*2));
     }
 }
 
