--- a/css/layout.css
+++ b/css/layout.css
@@ -54,7 +54,7 @@
 /* global */
 
 body {
-    background-color: var(--not-white);
+    background-color: var(--white);
     margin: 0;
     padding: 0;
 }
