--- a/css/cards.css
+++ b/css/cards.css
@@ -139,7 +139,7 @@
     flex-wrap: wrap;
     justify-content: flex-start;
     align-items: flex-start;
-    gap: var(--gap);
+    gap: var(--gap-large);
 }
 
 
@@ -187,7 +187,7 @@
 @media screen and (max-width: 1440px){
     .grid-archive .card, 
     .grid-archive .card img {
-        max-width: calc(var(--one-third-max-width) - (1rem));
+        max-width: calc(var(--one-third-max-width));
     }
 }
 @media screen and (max-width: 1200px){
@@ -200,16 +200,23 @@
 @media screen and (max-width: 880px){
     .grid-archive .card, 
     .grid-archive .card img {
-        max-width: calc(var(--one-half-max-width) - (0.5rem));
-        min-height: calc(var(--one-half-max-width) - (0.5rem));
+        max-width: calc(var(--one-half-max-width));
+        min-height: calc(var(--one-half-max-width));
     }
 }
 @media screen and (max-width: 660px){
     .grid-archive .card, 
     .grid-archive .card img {
-        max-width: calc(90vw - (0.0rem));
+        max-width: calc(var(--max-col-width));
         min-height: calc(90vw - (0.0rem));
     }
+}
+
+
+.grid-archive .card-content {
+    align-items: flex-start;
+    padding: 0;
+    padding-top: var(--gap-sm);
 }
 
 .grid-archive h3 {
@@ -339,4 +346,117 @@
         max-width: calc(90vw - (0.0rem));
         min-height: calc(90vw - (0.0rem));
     }
+}
+
+
+/* COLOUR PALETTE */
+
+/* grids */
+
+.grid-colours .column {
+    gap: var(--gap);
+}
+
+.grid-colours .grid-col.column {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    align-items: flex-start;
+    gap: var(--gap);
+}
+@media screen and (max-width: 1200px) {
+    .grid-colours .grid-col.column {
+        gap: var(--gap-large);
+    }
+}
+
+
+@media screen and (max-width: 1200px) {
+    .grid-colours .grid-col.column {
+        width: 100%;
+        max-width: unset;
+    }
+}
+.grid-colours .card {
+    width: 100%;
+    max-width: calc(var(--one-sixth-max-width));
+    overflow: hidden;
+}
+
+.grid-colours .card:hover,
+.grid-colours a:hover .card  {
+    box-shadow: 0 0 10px rgba(0,0,0,0.1);
+}
+
+.grid-colours .card img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+    display: block;
+    transform: scale(1);
+    transform-origin: center;
+    transition: var(--transition);
+    aspect-ratio: 1 / 1;
+    /* A4 */
+}
+
+.grid-colours .card:hover img,
+.grid-colours a:hover .card img {
+    transform: scale(1.05);
+    transform-origin: center;
+    transition: var(--transition);
+}
+
+@media screen and (max-width: 1440px){
+    .grid-colours .card, 
+    .grid-colours .card img {
+        max-width: calc(var(--one-sixth-max-width));
+    }
+}
+@media screen and (max-width: 1200px){
+    .grid-colours .card, 
+    .grid-colours .card img {
+       max-width: calc(var(--one-third-max-width));
+         /* min-height: calc(var(--one-third-max-width) - (1rem)); */
+    }
+}
+@media screen and (max-width: 1080px){
+    .grid-colours .card, 
+    .grid-colours .card img {
+        max-width: calc(var(--one-half-max-width));
+        /* min-height: calc(var(--one-third-max-width) - (2.5vw)); */
+    }
+}
+@media screen and (max-width: 660px){
+    .grid-colours .card, 
+    .grid-colours .card img {
+        /* max-width: calc(var(--one-half-max-width) - (2vw));
+        min-height: calc(var(--one-half-max-width) - (2vw)); */
+    }
+}
+
+.grid-colours .card-content {
+    align-items: flex-start;
+    padding: 0;
+    padding-top: var(--gap-sm);
+}
+
+.grid-colours h3 {
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    margin-bottom: 0;
+    font-family: var(--base-font-family);
+    font-size: var(--font-size-grid-title);
+}
+
+
+.grid-colours p {
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-line-clamp: 4;
+    -webkit-box-orient: vertical;
 }
