--- a/css/variables.css
+++ b/css/variables.css
@@ -15,9 +15,7 @@
 
     /* sizes */
     --max-width: 100vw;
-    /* --max-col-width: 90vw; */
-    --max-col-width: calc(100vw - (var(--gutter)*2));
-    /* --max-col-width: calc(1440px - var(--gap)); */
+    --max-col-width: calc(100vw - (var(--gutter) * 2));
     --header-height: 88px;
     --logo-width: 170px;
     --nav-width: 615px;
@@ -66,7 +64,7 @@
 @media screen and (max-width: 1440px){
     :root {
         /* --max-width: 100vw; */
-        --max-col-width: calc(100vw - (var(--gutter)*2));
+        /* --max-col-width: calc(100vw - (var(--gutter)*2)); */
     }
 }
 
@@ -99,16 +97,18 @@
 
 
 :root {
-    --column-width: calc(var(--max-width) - var(--gutter)*2);
-    --fourth-width: calc((var(--column-width) / 4 ) - (var(--gap)*2/3));
-    --third-width: calc(var(--max-width)* 1 / 3);
+    --column-width: calc(var(--max-width) - var(--gutter) * 2);
+    --fourth-width: calc((var(--column-width) / 4) - (var(--gap) * 3/4));
+    --third-width: calc(var(--max-width) / 3);
     --qtr-width: var(--fourth-width);
-    --hlf-width: calc((var(--column-width) / 2 ) - (var(--gap)*1/3));
-    --qtr-ratio-height: calc(var(--fourth-width) * .5625);
-    --hlf-ratio-height: calc(var(--hlf-width) * .5625);
-    --hlf-width-nogap: calc(var(--max-width)* 1 / 2);
-    --one-half-max-width: calc(var(--max-col-width)* 1 / 2 - var(--gap-large));
-    --one-third-max-width: calc(var(--max-col-width)* 1 / 3 - (var(--gap-large)*2/3));
-    --two-thirds-max-width: calc(var(--max-col-width)* 2 / 3 - (var(--gap-large)));
-    --one-qtr-max-width: calc(var(--max-col-width)* 1 / 4 - var(--gap-large));
+    --hlf-width: calc((var(--column-width) / 2) - (var(--gap) / 3));
+    --qtr-ratio-height: calc(var(--fourth-width) * 0.5625);
+    --hlf-ratio-height: calc(var(--hlf-width) * 0.5625);
+    --hlf-width-nogap: calc(var(--max-col-width) / 2);
+    --one-half-max-width: calc(var(--max-col-width) / 2 - (var(--gap-large) * 1/2));
+    --one-third-max-width: calc(var(--max-col-width) / 3 - (var(--gap-large) * 2/3));
+    --two-thirds-max-width: calc((var(--max-col-width) * 2 / 3) - (var(--gap-large) * 1/2));
+    --one-qtr-max-width: calc(var(--max-col-width) / 4 - (var(--gap-large) * 3/4));
+    --one-sixth-max-width: calc((var(--max-col-width)  / 6) - (var(--gap) * 5/6));
+    --one-sixth: var(--max-width);
 }
