--- a/css/typography.css
+++ b/css/typography.css
@@ -19,6 +19,7 @@
     --button-font-weight: 400;
     --link-font-weight: 700;
     --serif-font-weight: normal;
+    --serif-font-weight: 400;
     --blockquote-font-weight: normal;
     --heading-font-weight: 700;
     --menu-font-weight: 400;
@@ -221,6 +222,12 @@ h1, h2, h3 {
     font-weight: var(--serif-font-weight);
     line-height: 1.2;
     margin: 0 0 0.75rem 0;
+    /* fix for webkit rendering */
+    /* https://usabilitypost.com/2012/11/05/stop-fixing-font-smoothing/ */
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    /* -webkit-font-smoothing: auto;
+    -moz-osx-font-smoothing: auto; */
 }
 h1, h2 {
     text-transform: uppercase;
