--- a/css/specific.css
+++ b/css/specific.css
@@ -238,27 +238,260 @@
     background-position: center center;
 }
 
-/* plain */
+/* restricted width block quote section */
 
-.plain:has(blockquote) {
+.restricted:has(blockquote) {
     background-color: var(--not-white);
-    height: 70vh;
+    min-height: 70vh;
 }
 @media screen and (max-width: 1080px) {
-    .plain:has(blockquote) {
+    .restricted:has(blockquote) {
         height: auto;
+        min-height: unset;
     }
 }
 
-.plain:has(blockquote) .row {
+.restricted:has(blockquote) .row {
     height: 100%;
 }
 
-.plain:has(blockquote) .column:first-of-type {
+.restricted:has(blockquote) .column:first-of-type {
     height: 100%;
     justify-content: flex-start;
 }
-.plain:has(blockquote) .column:last-of-type {
+.restricted:has(blockquote) .column:last-of-type {
     height: 100%;
     justify-content: flex-end;
+    align-items: center;
+}
+
+.restricted:has(blockquote) .text_wrap p {
+    font-size: var(--font-size-sm);
+}
+
+.restricted .column:last-of-type blockquote p {
+    /* max-width: 600px; */
+} 
+
+/* ----------------------- */
+/* DUO */
+
+.plain.duo_section { 
+    height: 100%; 
+    min-height: calc(var(--hero-height));
+}
+
+.duo_section img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    /* aspect-ratio: 2 / 3; */
+    /* max-height: calc(var(--hero-height) - (var(--gutter)*2 )); */
+    height: calc(var(--hero-height) - (var(--gutter)*2 ));
+}
+@media screen and (max-width: 1080px) {
+    .duo_section img {
+        height: 100%;
+        aspect-ratio: 1 / 1;
+    }
+}
+
+.duo_section .column {
+    gap: 0;
+    align-items: center;
+    justify-content: center;
+    height: calc(var(--hero-height) - (var(--gutter)*2));
+}
+.duo_section .column:last-of-type {
+    /* max-width: 600px; */
+    /* gap: 0; */
+}
+.duo_section .row {
+    align-items: center;
+}
+@media screen and (max-width: 1080px) {
+    .duo_section .row {
+        flex-direction: column;
+    }
+}
+
+
+.duo_section blockquote, 
+.duo_section blockquote p,
+.duo_section p,
+.duo_section :not(blockquote) p {
+    /* min-width: unset;
+    width: 45vw;
+    max-width: 650px; */
+}
+
+/* ----------------------- */
+/* RANGE */
+
+@media screen and (max-width: 1080px) {
+    .range_sect {
+       margin-bottom: 2rem; 
+    }
+}
+
+/* ----------------------- */
+/* full-width-img section */
+
+section.full-width-img {
+    padding: 0;
+    max-height: var(--hero-height);
+    overflow: hidden;
+}
+section.full-width-img > * {
+    width: 100%;
+    max-width: unset;
+}
+
+section.full-width-img .img_wrap {
+    width: 100vw;
+}
+section.full-width-img img {
+    width: 100vw;
+    height: 100%;
+    object-fit: cover;
+}
+
+/* ----------------------- */
+/* half-width-img section */
+
+section.half-width-img {
+    padding: 0;
+    max-height: var(--hero-height);
+    overflow: hidden;
+}
+section.half-width-img > * {
+    width: 100%;
+    max-width: unset;
+}
+
+section.half-width-img .img_wrap {
+    width: 50vw;
+}
+section.half-width-img img {
+    width: 100%;
+    min-width: 50vw;
+    height: 100%;
+    object-fit: cover;
+}
+
+/* ----------------------- */
+/* half_panel */
+
+
+.half_panel,
+.half_panel-img_padding {
+    padding: 0;
+    max-height: unset;
+    height: 100%;
+}
+
+.half_panel .row,
+.half_panel-img_padding .row {
+    align-items: center;
+    max-width: unset;
+    gap: 0;
+    height: 100%;
+    flex:2;
+    align-items: stretch;
+}
+
+@media screen and (max-width: 1080px) {
+    .half_panel .row,
+    .half_panel-img_padding .row {
+        flex-direction: column;
+    }
+}
+
+.half_panel .column,
+.half_panel-img_padding .column {
+    align-items: center;
+    width: 50vw;
+    /* height: 100%;
+    flex: 1;  */
+    /* or flex-grow: 1  */;
+    
+
+}
+@media screen and (max-width: 1080px) {
+    .half_panel .column,
+    .half_panel-img_padding .column {
+        width: 100%;
+        max-width: 100%;
+    }
+}
+
+section.half_panel .text_wrap,
+section.half_panel-img_padding .text_wrap {
+    width: 50vw;
+    height: 100%;
+}
+@media screen and (max-width: 1080px) {
+    section.half_panel .text_wrap,
+    section.half_panel-img_padding .text_wrap {
+        width: 100%;
+    }
+}
+
+section.half_panel p,
+section.half_panel-img_padding p {
+    max-width: unset;
+}
+
+section.half_panel img {
+    width: 100%;
+    /* min-width: 50vw; */
+    height: 100%;
+    /* height: var(--hero-height); */
+    object-fit: cover;
+}
+
+section.half_panel .img_wrap, 
+section.half_panel-img_padding .img_wrap {
+    width: 100%;
+    /* min-width: 50vw; */
+    max-width: calc(50vw - (var(--gutter)*2));
+    height: 100%;
+    padding: var(--gutter);
+}
+@media screen and (max-width: 1080px) {
+    section.half_panel .img_wrap,
+    section.half_panel-img_padding .img_wrap {
+        width: 100%;
+    }
+}
+
+section.half_panel-img_padding img {
+    width: 100%;
+    height: 100%;
+    /* max-width: calc(50vw - (var(--gutter)*2)); */
+    object-fit: cover;
+}
+@media screen and (max-width: 1080px) {
+    section.half_panel-img_padding img {
+        max-width: calc(100% - (var(--gutter)*2));
+    }    
+}
+
+.half_panel .text_wrap,
+.half_panel-img_padding .text_wrap {
+    width: 100%;
+    padding: var(--gutter);
+    /* background-color: var(--not-white); */
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    box-sizing: border-box;
+    
+}
+
+.half_panel .text_wrap > * {
+    width: 100%;
+    max-width: unset;
 }
