--- a/css/footer.css
+++ b/css/footer.css
@@ -78,14 +78,20 @@ footer .row,
     padding: var(--gutter);
     box-sizing: border-box; 
 }
-@media screen and (max-width: 880px){    
-    footer .row.footer_main:first-of-type { 
-        padding-bottom: var(--gap);
-    }
-    footer .row.footer_main:last-of-type { 
-        padding-top: var(--gap);
-    }
+
+footer .row.footer_main { 
+    /* padding-bottom: var(--gap); */
 }
+
+/* footer .row.footer_main:first-of-type, */
+footer .row.footer_main:nth-of-type(2) { 
+    padding-bottom: var(--gap);
+}
+/* footer .row.footer_main:last-of-type, */
+footer .row.footer_main:nth-of-type(3) { 
+    padding-top: var(--gap);
+}
+
 footer .row.bottom {
     /* background-color: var(--primary); */
     /* color: var(--primary); */
