--- a/css/heros.css
+++ b/css/heros.css
@@ -65,12 +65,16 @@ body:not(.home) .hero {
 .dark_grad:after {
     position: absolute;
     z-index: 11;
-    height: 100vh;
+    height: var(--hero-height);
     width: 70vw;
     content: '';
     left: 0;
-    background-image: linear-gradient(91deg, rgba(0, 0, 0, 0.3), transparent);
+    background-image: linear-gradient(91deg, rgba(0, 0, 0, 0.7), transparent);
 }
+.dark_grad .row {
+    z-index: 1111;
+}
+
 @media screen and (max-width: 1080px) {
     .text_only.dark_grad:after {
         height: 50vh;
@@ -165,6 +169,9 @@ body.post .hero::before {
     gap: var(--gap-sm);
 }
 
+/* ----------------------- */
+/* home */
+
 section.home_hero .hero-content { 
     z-index: 2;
     /* position: absolute;
@@ -187,6 +194,9 @@ section.home_hero .hero-content h1 {
     opacity: 0;
 }
 
+/* ----------------------- */
+/* about */
+
 section.about_hero  {
     background-size: cover;
     background-position: 0% center;
@@ -204,6 +214,56 @@ section.about_hero .hero-content {
 }
 
 section.about_hero .hero-content h1 { 
+    display: none;
+    visibility: hidden;
+    opacity: 0;
+}
+
+/* ----------------------- */
+/* sustainability */
+
+section.sustainability_hero  {
+    background-size: cover;
+    background-position: right center;
+    background-repeat: no-repeat;
+}
+
+section.sustainability_hero .hero-content { 
+    z-index: 2;
+    width: 100%;
+    max-width: 100%;
+    padding: 0 var(--gap-large);
+    box-sizing: border-box;
+    content: url(../assets/heros/Sustainability_crafted.svg);
+    width: 60vh;
+}
+
+section.sustainability_hero .hero-content h1 { 
+    display: none;
+    visibility: hidden;
+    opacity: 0;
+}
+
+/*  */
+/* ----------------------- */
+/* sustainability_feature */
+
+section.sustainability_feature  {
+    background-size: cover;
+    background-position: 0% center;
+    background-repeat: no-repeat;
+}
+
+.sustainability_feature .hero-content { 
+    z-index: 2;
+    width: 100%;
+    max-width: 100%;
+    padding: 0 var(--gap-large);
+    box-sizing: border-box;
+    content: url(../assets/sustainability/designed_in_australia.svg);
+    width: 60vh;
+}
+section.sustainability_feature .hero-content h1 { 
     display: none;
     visibility: hidden;
     opacity: 0;
